--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,7 +1,14 @@
 <!-- As a link -->
 <nav class="navbar bg-body-tertiary" style="background-color: #94a3b8;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">AngularCourse</a>
+      <ul class="nav justify-content-center">
+        <li  class="nav-item">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/questionnaire">Questionnaire</a>
+        </li>
+      </ul>
       <ul class="nav justify-content-center">
         <li class="nav-item">
           <a class="nav-link" href="/signup">Sign Up</a>
